Что-то работающее, но не до конца

--- a/Wpf_1145_2024/MainWindow.xaml
+++ b/Wpf_1145_2024/MainWindow.xaml
@@ -14,6 +14,7 @@
         <Menu>
             <MenuItem Header="Редактор студентов" Click="openEditor"/>
             <MenuItem Header="Редактор задач" Click="openTaskEditor"/>
+            <MenuItem Header="Выбор исполнителей" Click="openExecutor"/>
         </Menu>
         <Frame Content="{Binding CurrentPage}"  Grid.Row="1" NavigationUIVisibility="Hidden"/>
     </Grid>
